fix blank spacing at header2 & underconstruction for projects page-2

--- a/public_html/css/global.css
+++ b/public_html/css/global.css
@@ -181,7 +181,8 @@ header h3 {
 
 #pageHeader {
 	font-size: 200%;
-	margin: 20px 0 40px 0;
+	padding-bottom: 10px;
+	margin: 20px 0;
 	background-color: darkgreen;
 	color: white;
 }
